fix(deeisgn): bit better on mobile

--- a/src/main.scss
+++ b/src/main.scss
@@ -120,7 +120,7 @@ h1 {
   pointer-events: none;
   will-change: top;
 
-  --top: 0;
+  --top: 0.001vw;
 
 }
 
